--- a/DCGAN/DCGAN.ipynb
+++ b/DCGAN/DCGAN.ipynb
@@ -1215,7 +1215,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
